--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port=${PORT}
 spring.security.oauth2.client.registration.google.client-id=${google-client-id}
 spring.security.oauth2.client.registration.google.client-secret=${google-client-secret}
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
