--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,4 @@ build/
 
 ### Environment Variables ###
 .env
-./src/main/resources/db-config.properties
+/src/main/resources/datasource.properties
