--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,6 @@ server:
   port: ${PORT}
 
 spring:
-  config:
-    location: db-config.properties
-
   security:
     oauth2:
       client:
@@ -13,3 +10,7 @@ spring:
           google:
             client-id: ${google-client-id}
             client-secret: ${google-client-secret}
+  datasource:
+    url:
+    username:
+    password:
