--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,6 @@ spring:
             client-id: ${google-client-id}
             client-secret: ${google-client-secret}
   datasource:
-    url:
-    username:
-    password:
+    url: ${spring.datasource.url}
+    username: ${spring.datasource.username}
+    password: ${spring.datasource.password}
