--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ server.port=${PORT}
 spring.security.oauth2.client.registration.google.client-id=${google-client-id}
 spring.security.oauth2.client.registration.google.client-secret=${google-client-secret}
 spring.datasource.url=${DATABASE_URL}
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDia
