--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 server.port=${PORT}
 spring.security.oauth2.client.registration.google.client-id=${google-client-id}
 spring.security.oauth2.client.registration.google.client-secret=${google-client-secret}
-spring.datasource.url=${DATABASE_URL}
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDia
